--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1" charset="UTF-8">
-        <title>Léot</title>
+        <title>JJINJJAJANG</title>
         <link rel="icon" type="image/icon type" href=""/> <!--This is the Favicon-->
         <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
         <!--Add meta property for sns-->
@@ -10,19 +10,17 @@
     </head>
     <body>
         <div class="wrapper">
-            <div class="logowrapper"><img class="logo" src="images/logo.png" alt="LÉOT">
+            <div class="logowrapper"><img class="logo" src="images/wordlogo.png" alt="JJINJJAJANG">
                 <nav>
                     <ul>
-                        <li><a href="">ONLINE STORE</a></li>
-                        <li><a href="">LOOKBOOK</a></li>
-                        <li><a href="">TEAM LÉOT</a></li>
-                        <li><a href="">CONTACT US</a></li>
-                        <li><a href="">COMMUNITY</a></li>
+                        <li><a href="">MENU 메뉴</a></li>
+                        <li><a href="">CONTACT US 연락</a></li>
+                        <li><a href="">REVIEWS 리뷰</a></li>
                     </ul>
                 </nav>
             </div>
             <div class="content">
-                <img src="images/shiba1.jpg" alt="shibainu">
+                <img src="images/jjajangmyeon-plate.jpg" alt="jjajangmyun">
             </div>
         </div>
     </body>
