--- a/menu.html
+++ b/menu.html
@@ -21,7 +21,7 @@
                 </nav>
             </div>
             <div class="content">
-                <img src="images/jjajangmyeon-plate.jpg" alt="jjajangmyun">
+                <img src="" alt="menu picture">
             </div>
         </div>
     </body>
