--- a/menu.html
+++ b/menu.html
@@ -11,7 +11,7 @@
     </head>
     <body>
         <div class="wrapper">
-            <div class="logowrapper"><img class="logo" src="images/wordlogo.png" alt="JJINJJAJANG">
+            <div class="logowrapper"><a href="index.html"><img class="logo" src="images/wordlogo.png" alt="JJINJJAJANG"></a>
                 <nav>
                     <ul>
                         <li><a href="menu.html">MENU 메뉴</a></li>
