--- a/contactus.html
+++ b/contactus.html
@@ -15,7 +15,7 @@
                 <nav>
                     <ul>
                         <li><a href="menu.html">MENU 메뉴</a></li>
-                        <li><a href="contactus.html">CONTACT US 연락</a></li>
+                        <li><a href="contactus.html" style="color: #991e1f;">CONTACT US 문의하기</a></li>
                         <li><a href="">REVIEWS 리뷰</a></li>
                     </ul>
                 </nav>
