--- a/menu.html
+++ b/menu.html
@@ -14,8 +14,8 @@
             <div class="logowrapper"><a href="index.html"><img class="logo" src="images/wordlogo.png" alt="JJINJJAJANG"></a>
                 <nav>
                     <ul>
-                        <li><a href="menu.html">MENU 메뉴</a></li>
-                        <li><a href="contactus.html">CONTACT US 연락</a></li>
+                        <li><a href="menu.html" style="color: #991e1f;">MENU 메뉴</a></li>
+                        <li><a href="contactus.html">CONTACT US 문의하기</a></li>
                         <li><a href="">REVIEWS 리뷰</a></li>
                     </ul>
                 </nav>
