--- a/index.html
+++ b/index.html
@@ -19,6 +19,12 @@
                         <li><a href="">REVIEWS 리뷰</a></li>
                     </ul>
                 </nav>
+                <div class="snsmenu">
+                    <ul>
+                        <li><a href="#"><img class="fbicon" src="snsicon/fbicon.png" alt="facebook"></a></li>
+                        <li><a href="#"><img class="instaicon" src="snsicon/instaicon.png" alt="instagram"></a></li>
+                    </ul>
+                </div>
             </div>
             <div class="content">
                 <img src="images/jjajangmyeon-plate.jpg" alt="jjajangmyun">
