--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
                 </div>
             </div>
             <div class="content">
-                <img src="images/jjajangmyeon-plate.jpg" alt="jjajangmyun">
+                <img src="images/jjajangmyeon-plate.jpg" alt="jjajangmyeon">
+                <img src="images/jjamppong-plate.jpeg" alt="jjamppong">
             </div>
         </div>
     </body>
