--- a/contactus.html
+++ b/contactus.html
@@ -27,7 +27,10 @@
                 </div>
             </div>
             <div class="content">
-               
+                <h2>HOURS: OPENING SOON</h2>
+                <h3><a href="https://goo.gl/maps/gZoneTpwwW3Ze65i6" style="text-decoration: none; color: #1c1c1c;">ADDRESS: 6242 Beach Blvd. Ste. A Buena Park, CA 90621</a></h3>
+                <h3><a href="tel:7147526037" style="text-decoration: none; color: #1c1c1c;">PHONE: (714)752-6037</a></h3>
+                <h3><a href="mailto:jjinjjajang@gmail.com" style="text-decoration: none; color: #1c1c1c;">EMAIL: jjinjjajang@gmail.com</a></h3>
             </div>
         </div>
     </body>
