--- a/menu.html
+++ b/menu.html
@@ -27,6 +27,7 @@
                 </div>
             </div>
             <div class="content">
+                <h2>COMING SOON</h2>
                 <img src="" alt="menu picture">
             </div>
         </div>
