--- a/menu.html
+++ b/menu.html
@@ -26,9 +26,11 @@
                     </ul>
                 </div>
             </div>
+            <br>
+            <br>
             <div class="content">
-                <h2>COMING SOON</h2>
-                <img src="" alt="menu picture">
+                <img class="menu" src="MenuWeb1.png" alt="menu picture">
+                <img class="menu" src="MenuWeb2.png" alt="menu picture">
             </div>
         </div>
     </body>
