--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
                 </nav>
                 <div class="snsmenu">
                     <ul>
-                        <li><a href="#"><img class="fbicon" src="snsicon/fbicon.png" alt="facebook"></a></li>
-                        <li><a href="#"><img class="instaicon" src="snsicon/instaicon.png" alt="instagram"></a></li>
+                        <li><a href="https://www.facebook.com/jjinjjajang/"><img class="fbicon" src="snsicon/fbicon.png" alt="facebook"></a></li>
+                        <li><a href="https://www.instagram.com/jjinjjajangbp/"><img class="instaicon" src="snsicon/instaicon.png" alt="instagram"></a></li>
                     </ul>
                 </div>
             </div>
