--- a/contactus.html
+++ b/contactus.html
@@ -16,7 +16,7 @@
                     <ul>
                         <li><a href="menu.html">MENU 메뉴</a></li>
                         <li><a href="contactus.html" style="color: #991e1f;">CONTACT US 문의하기</a></li>
-                        <li><a href="">REVIEWS 리뷰</a></li>
+                        <li><a href="https://www.yelp.com/biz/jjin-jjajang-buena-park-2?uid=m8vDjjZVnZW42dyZi89USA&utm_campaign=www_business_share_popup&utm_medium=copy_link&utm_source=(direct)">REVIEWS 리뷰</a></li>
                     </ul>
                 </nav>
                 <div class="snsmenu">
@@ -27,7 +27,19 @@
                 </div>
             </div>
             <div class="content">
-                <h2>HOURS: COMING SOON</h2>
+                <div class="hours">
+                    <h2>HOURS:</h2>
+                    <ul>
+                        <li><a style="font-size: smaller;">MON &nbsp;</a> 11:30am - 9:00pm</li>
+                        <li><a style="font-size: smaller;">TUE &nbsp; &nbsp; &nbsp;</a> closed</li>
+                        <li><a style="font-size: smaller;">WED &nbsp;</a> 11:30am - 9:00pm</li>
+                        <li><a style="font-size: smaller">THUR &nbsp;</a> 11:30am - 9:00pm</li>
+                        <li><a style="font-size: smaller">FRI &nbsp;</a> 11:30am - 9:00pm</li>
+                        <li><a style="font-size: smaller">SAT &nbsp;</a> 11:30am - 9:00pm</li>
+                        <li><a style="font-size: smaller">SUN &nbsp;</a> 11:30am - 9:00pm</li>
+                    </ul>
+                </div>
+                <br>
                 <h3><a href="https://goo.gl/maps/gZoneTpwwW3Ze65i6" style="text-decoration: none; color: #1c1c1c;">ADDRESS: 6242 Beach Blvd. Ste. A Buena Park, CA 90621</a></h3>
                 <h3><a href="tel:7147526037" style="text-decoration: none; color: #1c1c1c;">PHONE: (714)752-6037</a></h3>
                 <h3><a href="mailto:jjinjjajang@gmail.com" style="text-decoration: none; color: #1c1c1c;">EMAIL: jjinjjajang@gmail.com</a></h3>
