--- a/menu.html
+++ b/menu.html
@@ -16,7 +16,7 @@
                     <ul>
                         <li><a href="menu.html" style="color: #991e1f;">MENU 메뉴</a></li>
                         <li><a href="contactus.html">CONTACT US 문의하기</a></li>
-                        <li><a href="">REVIEWS 리뷰</a></li>
+                        <li><a href="https://www.yelp.com/biz/jjin-jjajang-buena-park-2?uid=m8vDjjZVnZW42dyZi89USA&utm_campaign=www_business_share_popup&utm_medium=copy_link&utm_source=(direct)">REVIEWS 리뷰</a></li>
                     </ul>
                 </nav>
                 <div class="snsmenu">
