--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
         <link rel="icon" type="image/icon type" href="images/favicon.png"/> <!--This is the Favicon-->
         <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Poor+Story&display=swap" rel="stylesheet">
-        <!--Add meta property for sns-->
+        <meta property="JjinJjajang 찐짜장" content="JjinJjajang 찐짜장">
+        <meta property="찐짜장" content="images/ProfileLogo.PNG">
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
