added menu photos

--- a/menu.html
+++ b/menu.html
@@ -36,6 +36,40 @@
             <div class="content">
                 <img class="menu" src="MenuWeb1.png" alt="menu picture">
                 <img class="menu" src="MenuWeb2.png" alt="menu picture">
+                <br>
+                <br>
+                <div class="menuwrapper">
+                    <li class="menuitem"><img class ="sample" src="food/jj.JPG">
+                        <div class="nameandprice">
+                            <h5>짜장면 JJAJANGMYEON</h5>
+                        </div>
+                    </li>
+                    <li class="menuitem"><img class= "sample" src="food/white.JPG">
+                        <div class="nameandprice">
+                            <h5>하얀짬뽕 WHITE JJAMPPONG</h5>
+                        </div>
+                    </li>
+                    <li class="menuitem"><img class= "sample" src="food/bokum.JPG">
+                        <div class="nameandprice">
+                            <h5>볶음짬뽕 STIR-FRIED JJAMPPONG</h5>
+                        </div>
+                    </li>
+                    <li class="menuitem"><img class= "sample" src="food/tang.JPG">
+                        <div class="nameandprice">
+                            <h5>탕수육(돼지) TANGSUYUK (PORK)</h5>
+                        </div>
+                    </li>
+                    <li class="menuitem"><img class= "sample" src="food/kanpoong.JPG">
+                        <div class="nameandprice">
+                            <h5>깐풍기(새우) KANGPOONG (SHRIMP)</h5>
+                        </div>
+                    </li>
+                    <li class="menuitem"><img class= "sample" src="food/shrimprice.JPG">
+                        <div class="nameandprice">
+                            <h5>새우볶음밥 SHRIMP FRIED RICE</h5>
+                        </div>
+                    </li>
+                </div>
             </div>
         </div>
     </body>
