--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             </div>
             <div class="content">
                 <img class="images" src="images/jjajangmyeon-plate.jpg" alt="jjajangmyeon">
-                <!--<img src="images/jjamppong-plate.jpeg" alt="jjamppong">-->
+                <!--<img class="images" src="images/jjbuilding.png" alt="찐짜장">-->
             </div>
         </div>
     </body>
