--- a/index.html
+++ b/index.html
@@ -37,12 +37,17 @@
                         </div>
                     </div>
                 </div>
+                
             </div>
             <div class="content">
-                <br>
-                <br>
                 <img class="images" src="images/jjajangmyeon-plate.jpg" alt="jjajangmyeon">
                 <!--<img class="images" src="images/jjbuilding.png" alt="찐짜장">-->
+            </div>
+            <div class="footer">
+                <ul>
+                    <li><h5> &ensp;&ensp;(714) 752-6037 &ensp;|&ensp; jjinjjajang@gmail.com &ensp;</h5></li>
+                    <li><h5> &ensp;&ensp; &#169; JJIN JJAJANG&ensp;|&ensp;All rights reserved.</h5></li>
+                </ul>
             </div>
         </div>
     </body>
