--- a/contactus.html
+++ b/contactus.html
@@ -38,7 +38,6 @@
                 </div>
             </div>
             <div class="content">
-                <br>
                 <div class="hours">
                     <h2>HOURS:</h2>
                     <ul>
@@ -58,6 +57,12 @@
                 <br>
                 <br>
                 <img class="deliicon" src="images/delilogo.png" alt="delivery logos">
+            </div>
+            <div class="footer">
+                <ul>
+                    <li><h5> &ensp;&ensp;(714) 752-6037 &ensp;|&ensp; jjinjjajang@gmail.com &ensp;</h5></li>
+                    <li><h5> &ensp;&ensp; &#169; JJIN JJAJANG&ensp;|&ensp;All rights reserved.</h5></li>
+                </ul>
             </div>
         </div>
     </body>
