--- a/menu.html
+++ b/menu.html
@@ -37,8 +37,6 @@
                     </div>
                 </div>
             </div>
-            <br>
-            <br>
             <div class="content">
                 <img class="menu" src="MenuWeb1.png" alt="menu picture">
                 <img class="menu" src="MenuWeb2.png" alt="menu picture">
@@ -76,6 +74,12 @@
                         </div>
                     </li>
                 </div>
+            </div>
+            <div class="footer">
+                <ul>
+                    <li><h5> &ensp;&ensp;(714) 752-6037 &ensp;|&ensp; jjinjjajang@gmail.com &ensp;</h5></li>
+                    <li><h5> &ensp;&ensp; &#169; JJIN JJAJANG&ensp;|&ensp;All rights reserved.</h5></li>
+                </ul>
             </div>
         </div>
     </body>
