--- a/menu.html
+++ b/menu.html
@@ -48,14 +48,34 @@
                             <h5>짜장면 JJAJANGMYEON</h5>
                         </div>
                     </li>
+                    <li class="menuitem"><img class ="sample" src="food/jangjj.jpg">
+                        <div class="nameandprice">
+                            <h5>쟁반짜장면 STIR-FRIED JJAJANGMYEON</h5>
+                        </div>
+                    </li>
+                    <li class="menuitem"><img class= "sample" src="food/jjp.jpg">
+                        <div class="nameandprice">
+                            <h5>짬뽕 JJAMPPONG</h5>
+                        </div>
+                    </li>
                     <li class="menuitem"><img class= "sample" src="food/white.JPG">
                         <div class="nameandprice">
                             <h5>하얀짬뽕 WHITE JJAMPPONG</h5>
                         </div>
                     </li>
+                    <li class="menuitem"><img class= "sample" src="food/oyster.jpg">
+                        <div class="nameandprice">
+                            <h5>굴짬뽕 OYSTER JJAMPPONG</h5>
+                        </div>
+                    </li>
                     <li class="menuitem"><img class= "sample" src="food/bokum.JPG">
                         <div class="nameandprice">
                             <h5>볶음짬뽕 STIR-FRIED JJAMPPONG</h5>
+                        </div>
+                    </li>
+                    <li class="menuitem"><img class= "sample" src="food/ul.jpg">
+                        <div class="nameandprice">
+                            <h5>울면 ULMYEON</h5>
                         </div>
                     </li>
                     <li class="menuitem"><img class= "sample" src="food/tang.JPG">
@@ -68,9 +88,24 @@
                             <h5>깐풍기(새우) KANGPOONG (SHRIMP)</h5>
                         </div>
                     </li>
+                    <li class="menuitem"><img class= "sample" src="food/orange.jpg">
+                        <div class="nameandprice">
+                            <h5>오렌지치킨 ORANGE CHICKEN</h5>
+                        </div>
+                    </li>
+                    <li class="menuitem"><img class= "sample" src="food/kungchick.jpg">
+                        <div class="nameandprice">
+                            <h5>쿵파오 치킨KUNGPAO CHICKEN</h5>
+                        </div>
+                    </li>
                     <li class="menuitem"><img class= "sample" src="food/shrimprice.JPG">
                         <div class="nameandprice">
                             <h5>새우볶음밥 SHRIMP FRIED RICE</h5>
+                        </div>
+                    </li>
+                    <li class="menuitem"><img class= "sample" src="food/shrimpbroc.jpg">
+                        <div class="nameandprice">
+                            <h5>새우 브로콜리 SHRIMP BROCCOLI</h5>
                         </div>
                     </li>
                 </div>
