--- a/contactus.html
+++ b/contactus.html
@@ -32,7 +32,7 @@
                     <br>
                     <div class="containter">
                         <div class="center">
-                            <div class="gh-button-ifrm" data-customer-id="2471628" data-restaurant-name="Jjin Jjajang" data-button-color="#ff0000:#ffffff" data-button-size="large" data-env="prod" data-shortlinkurl="http://menus.fyi/2471628" data-restaurant-address="6242 Beach Blvd Ste A, Buena Park CA, 90621" data-version="1.0" data-link-type="gh" data-target="_blank"></div><script src="http://gh-prod-restaurant-shortlinks.s3-website-us-east-1.amazonaws.com/libs/scripts/iframeLib.min.js"></script>
+                            <div class="gh-button-ifrm" data-customer-id="2471628" data-restaurant-name="Jjin Jjajang" data-button-color="#ff0000:#ffffff" data-button-size="large" data-env="prod" data-shortlinkurl="http://menus.fyi/2471628" data-restaurant-address="6242 Beach Blvd Ste A, Buena Park CA, 90621" data-version="1.0" data-link-type="gh" data-target="_self"></div><script src="http://gh-prod-restaurant-shortlinks.s3-website-us-east-1.amazonaws.com/libs/scripts/iframeLib.min.js"></script>
                         </div>
                     </div>
                 </div>
