--- a/menu.html
+++ b/menu.html
@@ -85,7 +85,7 @@
                     </li>
                     <li class="menuitem"><img class= "sample" src="food/kanpoong.JPG">
                         <div class="nameandprice">
-                            <h5>깐풍기(새우) KANGPOONG (SHRIMP)</h5>
+                            <h5>깐풍(새우) KANGPOONG (SHRIMP)</h5>
                         </div>
                     </li>
                     <li class="menuitem"><img class= "sample" src="food/orange.jpg">
@@ -95,7 +95,7 @@
                     </li>
                     <li class="menuitem"><img class= "sample" src="food/kungchick.jpg">
                         <div class="nameandprice">
-                            <h5>쿵파오 치킨KUNGPAO CHICKEN</h5>
+                            <h5>쿵파오 치킨 KUNGPAO CHICKEN</h5>
                         </div>
                     </li>
                     <li class="menuitem"><img class= "sample" src="food/shrimprice.JPG">
