addded more food

--- a/menu.html
+++ b/menu.html
@@ -88,6 +88,16 @@
                             <h5>깐풍(새우) KANGPOONG (SHRIMP)</h5>
                         </div>
                     </li>
+                    <li class="menuitem"><img class= "sample" src="food/mapo.JPG">
+                        <div class="nameandprice">
+                            <h5>마파두부 MAPO TOFU</h5>
+                        </div>
+                    </li>
+                    <li class="menuitem"><img class= "sample" src="food/vegetofu.JPG">
+                        <div class="nameandprice">
+                            <h5>야채두부 VEGETABLE TOFU</h5>
+                        </div>
+                    </li>
                     <li class="menuitem"><img class= "sample" src="food/orange.jpg">
                         <div class="nameandprice">
                             <h5>오렌지치킨 ORANGE CHICKEN</h5>
