Added Gallery Tab

--- a/menu.html
+++ b/menu.html
@@ -16,6 +16,7 @@
                     <ul>
                         <li><a href="menu.html" style="color: #991e1f;">MENU 메뉴</a></li>
                         <li><a href="contactus.html">CONTACT US 문의하기</a></li>
+                        <li><a href="gallery.html">GALLERY 사진</a></li>
                         <li><a href="https://www.yelp.com/biz/jjin-jjajang-buena-park-2?uid=m8vDjjZVnZW42dyZi89USA&utm_campaign=www_business_share_popup&utm_medium=copy_link&utm_source=(direct)">REVIEWS 리뷰</a></li>
                     </ul>
                 </nav>
@@ -40,90 +41,12 @@
             <div class="content">
                 <img class="menu" src="MenuWeb1.png" alt="menu picture">
                 <img class="menu" src="MenuWeb2.png" alt="menu picture">
-                <br>
-                <br>
-                <div class="menuwrapper">
-                    <li class="menuitem"><img class ="sample" src="food/jj.JPG">
-                        <div class="nameandprice">
-                            <h5>짜장면 JJAJANGMYEON</h5>
-                        </div>
-                    </li>
-                    <li class="menuitem"><img class ="sample" src="food/jangjj.jpg">
-                        <div class="nameandprice">
-                            <h5>쟁반짜장면 STIR-FRIED JJAJANGMYEON</h5>
-                        </div>
-                    </li>
-                    <li class="menuitem"><img class= "sample" src="food/jjp.jpg">
-                        <div class="nameandprice">
-                            <h5>짬뽕 JJAMPPONG</h5>
-                        </div>
-                    </li>
-                    <li class="menuitem"><img class= "sample" src="food/white.JPG">
-                        <div class="nameandprice">
-                            <h5>하얀짬뽕 WHITE JJAMPPONG</h5>
-                        </div>
-                    </li>
-                    <li class="menuitem"><img class= "sample" src="food/oyster.jpg">
-                        <div class="nameandprice">
-                            <h5>굴짬뽕 OYSTER JJAMPPONG</h5>
-                        </div>
-                    </li>
-                    <li class="menuitem"><img class= "sample" src="food/bokum.JPG">
-                        <div class="nameandprice">
-                            <h5>볶음짬뽕 STIR-FRIED JJAMPPONG</h5>
-                        </div>
-                    </li>
-                    <li class="menuitem"><img class= "sample" src="food/ul.jpg">
-                        <div class="nameandprice">
-                            <h5>울면 ULMYEON</h5>
-                        </div>
-                    </li>
-                    <li class="menuitem"><img class= "sample" src="food/tang.JPG">
-                        <div class="nameandprice">
-                            <h5>탕수육(돼지) TANGSUYUK (PORK)</h5>
-                        </div>
-                    </li>
-                    <li class="menuitem"><img class= "sample" src="food/kanpoong.JPG">
-                        <div class="nameandprice">
-                            <h5>깐풍(새우) KANGPOONG (SHRIMP)</h5>
-                        </div>
-                    </li>
-                    <li class="menuitem"><img class= "sample" src="food/mapo.JPG">
-                        <div class="nameandprice">
-                            <h5>마파두부 MAPO TOFU</h5>
-                        </div>
-                    </li>
-                    <li class="menuitem"><img class= "sample" src="food/vegetofu.JPG">
-                        <div class="nameandprice">
-                            <h5>야채두부 VEGETABLE TOFU</h5>
-                        </div>
-                    </li>
-                    <li class="menuitem"><img class= "sample" src="food/orange.jpg">
-                        <div class="nameandprice">
-                            <h5>오렌지치킨 ORANGE CHICKEN</h5>
-                        </div>
-                    </li>
-                    <li class="menuitem"><img class= "sample" src="food/kungchick.jpg">
-                        <div class="nameandprice">
-                            <h5>쿵파오 치킨 KUNGPAO CHICKEN</h5>
-                        </div>
-                    </li>
-                    <li class="menuitem"><img class= "sample" src="food/shrimprice.JPG">
-                        <div class="nameandprice">
-                            <h5>새우볶음밥 SHRIMP FRIED RICE</h5>
-                        </div>
-                    </li>
-                    <li class="menuitem"><img class= "sample" src="food/shrimpbroc.jpg">
-                        <div class="nameandprice">
-                            <h5>새우 브로콜리 SHRIMP BROCCOLI</h5>
-                        </div>
-                    </li>
-                </div>
             </div>
             <div class="footer">
                 <ul>
                     <li><h5> &ensp;&ensp;(714) 752-6037 &ensp;|&ensp; jjinjjajang@gmail.com &ensp;</h5></li>
-                    <li><h5> &ensp; &#169; JJIN JJAJANG&ensp;|&ensp;All rights reserved.</h5></li>
+                    <li><h5> &ensp; &#169; JJIN JJAJANG&ensp;|&ensp;All rights reserved.</h5></li> <br>
+                    <li><h5> Created by <a href="instagram.com/hyuntaees" style="text-decoration: none; color: #1c1c1c;">Hyuntae Jung</a> </h5></li>
                 </ul>
             </div>
         </div>
