--- a/contactus.html
+++ b/contactus.html
@@ -16,6 +16,7 @@
                     <ul>
                         <li><a href="menu.html">MENU 메뉴</a></li>
                         <li><a href="contactus.html" style="color: #991e1f;">CONTACT US 문의하기</a></li>
+                        <li><a href="gallery.html">GALLERY 사진</a></li>
                         <li><a href="https://www.yelp.com/biz/jjin-jjajang-buena-park-2?uid=m8vDjjZVnZW42dyZi89USA&utm_campaign=www_business_share_popup&utm_medium=copy_link&utm_source=(direct)">REVIEWS 리뷰</a></li>
                     </ul>
                 </nav>
@@ -61,7 +62,8 @@
             </div>
             <div class="footer">
                 <ul>
-                    <li><h5> &ensp; &#169; JJIN JJAJANG&ensp;|&ensp;All rights reserved.&ensp;</h5></li>
+                    <li><h5> &ensp; &#169; JJIN JJAJANG&ensp;|&ensp;All rights reserved.&ensp;</h5></li> <br>
+                    <li><h5> Created by <a href="instagram.com/hyuntaees" style="text-decoration: none; color: #1c1c1c;">Hyuntae Jung</a> </h5></li>
                 </ul>
             </div>
         </div>
