--- a/contactus.html
+++ b/contactus.html
@@ -63,7 +63,7 @@
             <div class="footer">
                 <ul>
                     <li><h5> &ensp; &#169; JJIN JJAJANG&ensp;|&ensp;All rights reserved.&ensp;</h5></li> <br>
-                    <li><h5> Created by <a href="instagram.com/hyuntaees" style="text-decoration: none; color: #1c1c1c;">Hyuntae Jung</a> </h5></li>
+                    <li><h5> Created by <a href="https://www.instagram.com/hyuntaees" style="text-decoration: none; color: #1c1c1c;">Hyuntae Jung</a> </h5></li>
                 </ul>
             </div>
         </div>
