--- a/gallery.html
+++ b/gallery.html
@@ -121,7 +121,7 @@
                 <ul>
                     <li><h5> &ensp;&ensp;(714) 752-6037 &ensp;|&ensp; jjinjjajang@gmail.com &ensp;</h5></li>
                     <li><h5> &ensp; &#169; JJIN JJAJANG&ensp;|&ensp;All rights reserved.</h5></li> <br>
-                    <li><h5> Created by <a href="instagram.com/hyuntaees" style="text-decoration: none; color: #1c1c1c;">Hyuntae Jung</a> </h5></li>
+                    <li><h5> Created by <a href="https://www.instagram.com/hyuntaees" style="text-decoration: none; color: #1c1c1c;">Hyuntae Jung</a> </h5></li>
                 </ul>
             </div>
         </div>
