--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                         <li><a href="menu.html">MENU 메뉴</a></li>
                         <li><a href="contactus.html">CONTACT US 문의하기</a></li>
                         <li><a href="gallery.html">GALLERY 사진</a></li>
-                        <li><a href="https://www.yelp.com/biz/jjin-jjajang-buena-park-2?uid=m8vDjjZVnZW42dyZi89USA&utm_campaign=www_business_share_popup&utm_medium=copy_link&utm_source=(direct)">REVIEWS 리뷰</a></li>
+                        <li><a href="https://www.yelp.com/biz/jjin-jjajang-buena-park-2?uid=m8vDjjZVnZW42dyZi89USA&utm_campaign=www_business_share_popup&utm_medium=copy_link&utm_source=(direct)"><img class="yelplogo" src="snsicon/yelplogo.png" alt="yelplogo"></a></li>
                     </ul>
                 </nav>
                 <div class="snsmenu">
