--- a/contactus.html
+++ b/contactus.html
@@ -40,7 +40,7 @@
             </div>
             <div class="content">
                 <div class="hours">
-                    <h3>We are currently closing at 8:00pm due to the pandemic. We apologize for the inconvenience and appreciate your understanding. Thank you. </h3>
+                    <h3>Our LAST CALL is at 8:30pm. </h3>
                     <h2>HOURS:</h2>
                     <ul>
                         <li><a style="font-size: smaller;">MON &nbsp;</a> 11:00am - 9:00pm</li>
