--- a/menu.html
+++ b/menu.html
@@ -39,8 +39,7 @@
                 </div>
             </div>
             <div class="content">
-                <img class="menu" src="MenuWeb1.png" alt="menu picture">
-                <img class="menu" src="MenuWeb2.png" alt="menu picture">
+                <img class="images" src="picturemenu.png" alt="menu picture">
             </div>
             <div class="footer">
                 <ul>
