--- a/index.html
+++ b/index.html
@@ -41,9 +41,7 @@
                 
             </div>
             <div class="content">
-                <!--<img class="images" src="images/beansoup.png" alt="jjamppong">-->
-                <img class="images" src="images/picturemenu.png" alt="jjajangmyeon">
-                <!--<img class="images" src="images/jjbuilding.png" alt="찐짜장">-->
+                <img class="images" src="images/jjbuilding.jpg" alt="찐짜장">
             </div>
             <div class="footer">
                 <ul>
