--- a/contactus.html
+++ b/contactus.html
@@ -60,6 +60,7 @@
                 <br>
                 <br>
                 <img class="deliicon" src="images/delilogo.png" alt="delivery logos">
+                <img class="deliicon" src="images/uberlogo.png" alt="delivery logos">
             </div>
             <div class="footer">
                 <ul>
