--- a/contactus.html
+++ b/contactus.html
@@ -40,7 +40,7 @@
             </div>
             <div class="content">
                 <div class="hours">
-                    <h3>Our LAST CALL is at 8:00am. </h3>
+                    <h3>Our LAST CALL is at 8:00pm. </h3>
                     <h2>HOURS:</h2>
                     <ul>
                         <li><a style="font-size: smaller;">MON &nbsp;</a> 11:00am - 8:00pm</li>
@@ -60,7 +60,6 @@
                 <br>
                 <br>
                 <img class="deliicon" src="images/delilogo.png" alt="delivery logos">
-                <img class="deliicon" src="images/uberlogo.png" alt="delivery logos">
             </div>
             <div class="footer">
                 <ul>
